--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "url": "git+https://github.com/Juliya-Boiko/nodejs-apartments-api.git"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.0.3",
     "express": "4.17.1",
     "joi": "^17.7.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "morgan": "1.10.0",
     "nanoid": "^3.3.4"
